--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,8 @@ spring:
         locator:
           enabled: true
           lower-case-service-id: true
+  jmx:
+    port: 9002
   output:
     ansi:
       enabled: ALWAYS
