--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,7 +12,7 @@ spring:
           enabled: true
           lower-case-service-id: true
   jmx:
-    port: 9002
+    enabled: false
   output:
     ansi:
       enabled: ALWAYS
